# Python-ORBSLAM3

./: .gitignore  BUILD.md  CMakeLists.txt  build.sh
include/: System.h  Tracking.h
pyorbslam3/: __init__.pyi
src/: System.cc  Tracking.cc
src/python_bindings/: bindings.cc
